----------  JFREECHART 1.0.14 RELEASED ------------------------

2011-11-12  Martin Hoeller <martin.hoeller@xss.co.at>

    Bug 3432721:
    * org/jfree/chart/plot/PolarPlot.java
    (translateToJava2D): Fix calculation to work with any axis,
    (translateValueThetaRadiusToJava2D): eliminate duplicate code;
    * tests/org/jfree/chart/plot/PolarPlotTests.java
    (testTranslateToJava2D_NumberAxis): New method,
    (testTranslateToJava2D_NumberAxisAndMargin): New method,
    (testTranslateToJava2D_LogAxis): New method;

2011-11-09  Martin Hoeller <martin.hoeller@xss.co.at>

    Translations provided by Petr Kopac:
    * org/jfree/chart/LocalizationBundle_cs.properties: New file;
    * org/jfree/chart/plot/LocalizationBundle_cs.properties: New file;
    * org/jfree/chart/editor/LocalizationBundle_cs.properties: New file;

2011-11-09  Martin Hoeller <martin.hoeller@xss.co.at>

    Bug 3433405:
    * org/jfree/chart/renderer/category/LineRenderer3D.java
    (drawItem): Fixed eventually wrong item label position;

2011-11-01  David Gilbert <david.gilbert@object-refinery.com>

    Bug 3432020:
    * org/jfree/chart/renderer/xy/AbstractXYItemRenderer.java
    (clone): Remove duplicated lines.

2011-10-30  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/renderer/category/IntervalBarRenderer.java
    (drawInterval): Fix calculation of bar edge;
    * org/jfree/chart/renderer/category/StatisticalBarRenderer.java
    (drawHorizontalItem): Fix calculation of bar edge;
    (drawVerticalItem): Likewise;
    
2011-10-30  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/StandardChartTheme.java
    (StandardChartTheme(String, boolean)): New method.

2011-10-28  Martin Hoeller <martin.hoeller@xss.co.at>

    Bug 2810220:
    * org/jfree/chart/renderer/category/StatisticalBarRenderer.java
    (drawHorizontalItem): Fixed offset problem with maximalBarWidth,
    (drawVerticalItem): Likewise;
