@@ -2,7 +2,7 @@
 *  JFREECHART: Version 1.0.14  *
 ********************************
 
-30 October 2011
+13 November 2011
 
 (C)opyright 2000-2011, by Object Refinery Limited and Contributors.
 
@@ -179,7 +179,7 @@ please post a bug report.
 --------------
 A list of changes in recent versions:
 
-1.0.14 : (30-Oct-2011)
+1.0.14 : (13-Nov-2011)
         - added support for multiple axes in PolarPlot, performance 
           improvements in the TimeSeriesCollection class, mouse wheel rotation
           in the PiePlot class, improved Maven support, a range of other
